--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "babel-plugin-insert-pathname",
+    "name": "@hh.ru/babel-plugin-insert-pathname",
     "version": "1.0.0",
     "description": "Babel plugin, which allows to add filename as an argument into function call",
     "main": "src/index.js",
