--- a/package.json
+++ b/package.json
@@ -18,7 +18,11 @@
         "eslint": "^6.4.0",
         "eslint-config-prettier": "^6.3.0",
         "eslint-plugin-prettier": "^3.1.1",
-        "jest": "^24.9.0",
+        "jest": "^25.2.7",
         "prettier": "^1.18.2"
-    }
+    },
+    "resolutions": {
+        "kind-of": "6.0.3"
+    },
+    "dependencies": {}
 }
