--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "description": "Babel plugin, which allows to add filename as an argument into function call",
     "main": "src/index.js",
     "scripts": {
-        "test": "jest"
+        "test": "jest",
+        "release": "npm publish --access=public"
     },
     "author": "Nik Mostovoy (nik.mostovoy@gmail.com)",
     "license": "MIT",
