--- a/.hh-release.yaml
+++ b/.hh-release.yaml
@@ -1,3 +1,4 @@
 version: 1.0.5
+build_image: registry.pyn.ru/node14-ubuntu18-building:2021.09.09
 update_method: npm_update
-push_method: npm_push
+build_method: npm_build
